istio/service-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: client-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - client-app-gateway
  http:
  - match:
    - uri:
        exact: /jpa/v1/students
    route:
    - destination:
        host: gateway-service
        port:
          number: 8080
